feat(Auth): update jwt strategy and add role to secure route
